--- a/src/app/list-dpt/list-dpt.component.html
+++ b/src/app/list-dpt/list-dpt.component.html
@@ -2,5 +2,5 @@
 
 <ul>
     @for (departamentos of getDpts(); track $index)
-    {<li>{{departamentos.NombreDepartamento}}, {{departamentos.Descripcion}}</li>}
+    {<li><b>{{departamentos.NombreDepartamento}},</b> {{departamentos.Descripcion}}</li>}
 </ul>
